# coulomb_solver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.txt  file_io.cpp  main.cpp  unroll.hpp  vector.hpp
assets/: debug.txt  test.txt
html/: annotated.html  binary__operations_8hpp_source.html  classCoulombSolver-members.html  classCoulombSolver.html  classExprSize.html  classExprSize_3_01BinaryOp_3_01Expr1_00_01Expr2_00_01operation_01_4_01_4.html  classExprSize_3_01BinaryOp_3_01Expr1_00_01Expr2_00_01operation_01_4_01_4__coll__graph.md5  classExprSize_3_01BinaryOp_3_01Expr1_00_01Expr2_00_01operation_01_4_01_4__inherit__graph.map  classExprSize_3_01BinaryOp_3_01Expr1_00_01Expr2_00_01operation_01_4_01_4__inherit__graph.md5  classExprSize_3_01Vector_3_01T_00_01n_01_4_01_4.html  classExprSize_3_01Vector_3_01T_00_01n_01_4_01_4__coll__graph.map  classExprSize_3_01Vector_3_01T_00_01n_01_4_01_4__coll__graph.md5  classExprSize_3_01Vector_3_01T_00_01n_01_4_01_4__inherit__graph.md5  classMemoryMappedFile-members.html  classMemoryMappedFile.html  classes.html  coulomb__solver_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  file__io_8hpp_source.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  (+20 more)
latex/: annotated.tex  classCoulombSolver.tex  classExprSize.tex  refman.tex  (+15 more)
(+16 files in other folders)
